<resources>
    <string name="app_name">仿网易新闻</string>
    <string name="action_settings">设置</string>
    <string name="tab_title_news">新闻</string>
    <string name="tab_title_read">阅读</string>
    <string name="tab_title_va">视听</string>
    <string name="tab_title_topic">话题</string>
    <string name="tab_title_pc">我</string>
    <string name="title_Sports">体育</string>
    <string name="title_International">国际</string>
    <string name="title_Technology">科技</string>
    <string name="title_Sociology">社会</string>
    <string name="title_military">军事</string>
    <string name="topic_itemtype_technology">科技</string>
    <string name="topic_itemtype_humanity">人文</string>
    <string name="topic_itemtype_finance">财经</string>
    <string name="topic_itemtype_healthy">健康</string>
    <string name="topic_itemtype_other">其它</string>
    <string name="topic_state_ongoing">进行中</string>
    <string name="topic_state_end">结束</string>
    <string name="main_menu__search">搜索</string>
    <string name="main_menu_info">24小时要闻</string>
    <string name="read_menu_add">添加订阅</string>
    <string name="category_account">账号设置</string>
    <string name="personal_setting">个人设置</string>
    <string name="other_account">绑定其他平台</string>
    <string name="category_application">系统设置</string>
    <string name="column_plugin">栏目插件设置</string>
    <string name="text_font">字体设置</string>
    <string name="text_font_default">默认字体</string>
    <string name="application_text_size">正文字号</string>
    <string name="text_size_mid">中号字</string>
    <string name="application_push">要闻推送</string>
    <string name="personal_text">智能头条</string>
    <string name="night_text">夜间模式</string>
    <string name="application_offline">离线阅读</string>
    <string name="no_picture">非WIFI网络不下载图片</string>
    <string name="other_setting">其它设置</string>
    <string name="check_updata">检查更新</string>
    <string name="feed_back">帮助与反馈</string>
    <string name="setting_recommand">应用推荐</string>
    <string name="rating_guide">为网易新闻评分</string>
    <string name="about">关于</string>
    <string name="show_ad">封面故事</string>
    <string name="clear_cache">手动清理缓存</string>
    <string name="main_message">我的消息</string>
    <string name="main_goldmall">金币商城</string>
    <string name="main_task">我的任务</string>
    <string name="main_wallet">我的钱包</string>
    <string name="main_promo">活动广场</string>
    <string name="main_gamecenter">游戏中心</string>
    <string name="main_mail">我的邮箱</string>
    <string name="main_invitefriends">邀请好友</string>\
</resources>
